flex-grid/grid.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <header>
-    <nav><a href="/Grid and Flex/grid.html">Grid Box</a></nav>
+    <nav><a href="/Flex-Grid/grid.html">Grid Box</a></nav>
     </header>
     <main class="container">
       <div class="sedans">
