--- a/grid.html
+++ b/grid.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-    <nav><a href="/Grid and Flex/Flex Box/index.html">Flex Box</a></nav>
+    <nav><a href="/Grid and Flex/index.html">Flex Box</a></nav>
     </header>
     <main>
         <div class="grid-container">
